--- a/App 2 modulo/Las Chelas/Las Chelas/Las Chelas/AccountTab~.storyboard
+++ b/App 2 modulo/Las Chelas/Las Chelas/Las Chelas/AccountTab~.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,7 +22,7 @@
                     <connections>
                         <segue destination="Yg8-sQ-amr" kind="relationship" relationship="viewControllers" id="xbm-fq-blx"/>
                         <segue destination="8dE-Si-cH4" kind="relationship" relationship="viewControllers" id="W4d-KP-pgc"/>
-                        <segue destination="8ye-fI-9Hc" kind="relationship" relationship="viewControllers" id="K6d-O0-CHG"/>
+                        <segue destination="qz0-jK-Jzf" kind="relationship" relationship="viewControllers" id="K6d-O0-CHG"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5Qt-7I-ns6" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -46,17 +47,23 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KX2-1R-BFZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1007" y="133"/>
+            <point key="canvasLocation" x="1122" y="261"/>
         </scene>
-        <!--AccountTab-->
-        <scene sceneID="Eoo-8D-wvl">
+        <!--Item-->
+        <scene sceneID="rMd-do-4PO">
             <objects>
-                <viewControllerPlaceholder storyboardName="AccountTab" id="8ye-fI-9Hc" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="rKt-4V-18S"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="rKj-x2-tay" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="qz0-jK-Jzf" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Kl4-R8-ulV">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="iFT-z9-p5p"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="nLY-Lg-2b2"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UZ6-v7-E5a" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1019" y="421"/>
+            <point key="canvasLocation" x="1132" y="663"/>
         </scene>
     </scenes>
 </document>
