--- a/App 2 modulo/Las Chelas/Las Chelas/Las Chelas/Base.lproj/OrderTab~.storyboard
+++ b/App 2 modulo/Las Chelas/Las Chelas/Las Chelas/Base.lproj/OrderTab~.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -20,8 +21,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="Yg8-sQ-amr" kind="relationship" relationship="viewControllers" id="xbm-fq-blx"/>
-                        <segue destination="8dE-Si-cH4" kind="relationship" relationship="viewControllers" id="W4d-KP-pgc"/>
-                        <segue destination="8ye-fI-9Hc" kind="relationship" relationship="viewControllers" id="K6d-O0-CHG"/>
+                        <segue destination="dWO-4C-Akw" kind="relationship" relationship="viewControllers" id="W4d-KP-pgc"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5Qt-7I-ns6" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -38,25 +38,21 @@
             </objects>
             <point key="canvasLocation" x="1038" y="-128"/>
         </scene>
-        <!--OrderTab-->
-        <scene sceneID="Oet-JV-4nP">
+        <!--Item-->
+        <scene sceneID="lHJ-XQ-N9k">
             <objects>
-                <viewControllerPlaceholder storyboardName="OrderTab" id="8dE-Si-cH4" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="aE5-5F-HZS"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="KX2-1R-BFZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="dWO-4C-Akw" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ukT-SX-MaY">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="0dT-Do-YEc"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="dnt-2y-zLh"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GfN-mJ-LOT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1007" y="133"/>
-        </scene>
-        <!--AccountTab-->
-        <scene sceneID="Eoo-8D-wvl">
-            <objects>
-                <viewControllerPlaceholder storyboardName="AccountTab" id="8ye-fI-9Hc" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="rKt-4V-18S"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="rKj-x2-tay" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1019" y="421"/>
+            <point key="canvasLocation" x="1369" y="612"/>
         </scene>
     </scenes>
 </document>
