--- a/App 2 modulo/Las Chelas/Las Chelas/Las Chelas/BeerTab/View/DetailBeerST.storyboard
+++ b/App 2 modulo/Las Chelas/Las Chelas/Las Chelas/BeerTab/View/DetailBeerST.storyboard
@@ -7,7 +7,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -20,55 +19,34 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="9upCT64I_400x400" translatesAutoresizingMaskIntoConstraints="NO" id="ois-cg-wMQ">
-                                <rect key="frame" x="143" y="38" width="128" height="128"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="9upCT64I_400x400" translatesAutoresizingMaskIntoConstraints="NO" id="ois-cg-wMQ">
+                                <rect key="frame" x="157" y="40" width="100" height="100"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="128" id="VK2-gP-0SI"/>
-                                    <constraint firstAttribute="width" constant="128" id="xcs-5E-8Xk"/>
+                                    <constraint firstAttribute="width" constant="100" id="LqN-dj-frq"/>
+                                    <constraint firstAttribute="width" secondItem="ois-cg-wMQ" secondAttribute="height" id="oRp-fN-JGH"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cQp-kw-MVo">
-                                <rect key="frame" x="34.999999999999993" y="199" width="93.333333333333314" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cQp-kw-MVo">
+                                <rect key="frame" x="10" y="160" width="41.666666666666664" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fgd-tZ-wQx">
-                                <rect key="frame" x="179.33333333333334" y="199" width="93.333333333333343" height="24.666666666666657"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OhK-y7-pTx" customClass="RatingStarView" customModule="Las_Chelas" customModuleProvider="target">
-                                <rect key="frame" x="20" y="240" width="375" height="106"/>
-                                <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ratingrankin" translatesAutoresizingMaskIntoConstraints="NO" id="Fmz-4Y-9Xe">
-                                        <rect key="frame" x="-8" y="-6" width="383" height="118"/>
-                                    </imageView>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstItem="Fmz-4Y-9Xe" firstAttribute="top" secondItem="OhK-y7-pTx" secondAttribute="top" constant="-6" id="iEQ-dq-ewq"/>
-                                    <constraint firstItem="Fmz-4Y-9Xe" firstAttribute="leading" secondItem="OhK-y7-pTx" secondAttribute="leading" constant="-8" id="n6F-JC-M33"/>
-                                    <constraint firstItem="Fmz-4Y-9Xe" firstAttribute="centerX" secondItem="OhK-y7-pTx" secondAttribute="centerX" constant="-4" id="qnC-y2-qa1"/>
-                                    <constraint firstItem="Fmz-4Y-9Xe" firstAttribute="centerY" secondItem="OhK-y7-pTx" secondAttribute="centerY" id="u03-hj-FlF"/>
-                                </constraints>
-                            </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OiR-wx-23E">
-                                <rect key="frame" x="317" y="199" width="42" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fgd-tZ-wQx">
+                                <rect key="frame" x="186.33333333333334" y="160" width="41.666666666666657" height="20.333333333333343"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="q6c-pa-xxM">
-                                <rect key="frame" x="25" y="391" width="363" height="286"/>
+                                <rect key="frame" x="0.0" y="315" width="414" height="321"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cellDynamic" id="yMn-mh-Wkh" customClass="BeerDetailCell" customModule="Las_Chelas" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="363" height="44"/>
+                                        <rect key="frame" x="0.0" y="28" width="414" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="yMn-mh-Wkh" id="df4-qz-9cL">
-                                            <rect key="frame" x="0.0" y="0.0" width="363" height="43.666666666666664"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.666666666666664"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Biy-V1-XqB">
@@ -106,30 +84,36 @@
                                     <outlet property="delegate" destination="4WV-VN-AA0" id="NhM-Hd-6Yk"/>
                                 </connections>
                             </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OiR-wx-23E">
+                                <rect key="frame" x="362" y="160" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ratingrankin" translatesAutoresizingMaskIntoConstraints="NO" id="Fmz-4Y-9Xe">
+                                <rect key="frame" x="107" y="200" width="200" height="65"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="65" id="UnX-Bg-b6y"/>
+                                    <constraint firstAttribute="width" constant="200" id="gUi-zi-jca"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="OhK-y7-pTx" firstAttribute="top" secondItem="FYf-HH-YdG" secondAttribute="top" constant="240" id="2KN-CG-pgT"/>
-                            <constraint firstItem="fgd-tZ-wQx" firstAttribute="width" secondItem="OiR-wx-23E" secondAttribute="width" id="4QV-vv-Gxu"/>
-                            <constraint firstItem="OhK-y7-pTx" firstAttribute="centerX" secondItem="ois-cg-wMQ" secondAttribute="centerX" id="76G-Az-NGN"/>
-                            <constraint firstItem="cQp-kw-MVo" firstAttribute="width" secondItem="fgd-tZ-wQx" secondAttribute="width" id="8MA-12-7BN"/>
-                            <constraint firstItem="cQp-kw-MVo" firstAttribute="width" secondItem="fgd-tZ-wQx" secondAttribute="height" multiplier="80:21" id="BBN-Xj-D0S"/>
-                            <constraint firstItem="jC3-LL-W8P" firstAttribute="trailing" secondItem="q6c-pa-xxM" secondAttribute="trailing" constant="26" id="C4C-Nt-n1Q"/>
-                            <constraint firstItem="fgd-tZ-wQx" firstAttribute="top" secondItem="ois-cg-wMQ" secondAttribute="bottom" constant="33" id="CRj-Ms-Tsu"/>
-                            <constraint firstItem="OhK-y7-pTx" firstAttribute="top" secondItem="cQp-kw-MVo" secondAttribute="bottom" constant="20" id="Eeb-YP-Peq"/>
-                            <constraint firstItem="q6c-pa-xxM" firstAttribute="top" secondItem="Fmz-4Y-9Xe" secondAttribute="bottom" constant="39" id="Ilh-wc-iI7"/>
-                            <constraint firstItem="ois-cg-wMQ" firstAttribute="top" secondItem="jC3-LL-W8P" secondAttribute="top" constant="18" id="MXo-54-vVI"/>
-                            <constraint firstItem="ois-cg-wMQ" firstAttribute="centerX" secondItem="FYf-HH-YdG" secondAttribute="centerX" id="PLT-n2-ZMX"/>
-                            <constraint firstItem="OhK-y7-pTx" firstAttribute="leading" secondItem="FYf-HH-YdG" secondAttribute="leadingMargin" id="RBC-c9-NeS"/>
-                            <constraint firstItem="OhK-y7-pTx" firstAttribute="centerX" secondItem="fgd-tZ-wQx" secondAttribute="centerX" constant="-18.5" id="SiM-dp-cJV"/>
-                            <constraint firstItem="fgd-tZ-wQx" firstAttribute="leading" secondItem="cQp-kw-MVo" secondAttribute="trailing" constant="51" id="WF0-Vh-Owe"/>
-                            <constraint firstItem="q6c-pa-xxM" firstAttribute="leading" secondItem="jC3-LL-W8P" secondAttribute="leading" constant="25" id="aIQ-9q-Psl"/>
-                            <constraint firstItem="cQp-kw-MVo" firstAttribute="leading" secondItem="jC3-LL-W8P" secondAttribute="leading" constant="35" id="auO-Yg-CV2"/>
-                            <constraint firstItem="fgd-tZ-wQx" firstAttribute="width" secondItem="OiR-wx-23E" secondAttribute="height" multiplier="80:21" id="iij-Rx-1Jh"/>
-                            <constraint firstItem="jC3-LL-W8P" firstAttribute="bottom" secondItem="q6c-pa-xxM" secondAttribute="bottom" constant="59" id="kzX-dd-qpx"/>
-                            <constraint firstItem="jC3-LL-W8P" firstAttribute="bottom" secondItem="OhK-y7-pTx" secondAttribute="bottom" constant="390" id="rVe-HQ-P6R"/>
-                            <constraint firstItem="OiR-wx-23E" firstAttribute="baseline" secondItem="fgd-tZ-wQx" secondAttribute="baseline" id="ysb-30-Xfw"/>
-                            <constraint firstItem="OiR-wx-23E" firstAttribute="leading" secondItem="fgd-tZ-wQx" secondAttribute="trailing" constant="42" id="zld-fc-kiM"/>
+                            <constraint firstItem="cQp-kw-MVo" firstAttribute="leading" secondItem="jC3-LL-W8P" secondAttribute="leading" constant="10" id="3LV-oH-Vnp"/>
+                            <constraint firstItem="jC3-LL-W8P" firstAttribute="bottom" secondItem="q6c-pa-xxM" secondAttribute="bottom" constant="100" id="9cW-Gt-50Z"/>
+                            <constraint firstItem="ois-cg-wMQ" firstAttribute="top" secondItem="jC3-LL-W8P" secondAttribute="top" constant="20" id="9wX-Tn-Ovc"/>
+                            <constraint firstItem="jC3-LL-W8P" firstAttribute="trailing" secondItem="q6c-pa-xxM" secondAttribute="trailing" id="Dvt-Pk-HXS"/>
+                            <constraint firstItem="Fmz-4Y-9Xe" firstAttribute="centerX" secondItem="FYf-HH-YdG" secondAttribute="centerX" id="O3o-PC-j5i"/>
+                            <constraint firstItem="q6c-pa-xxM" firstAttribute="top" secondItem="Fmz-4Y-9Xe" secondAttribute="bottom" constant="50" id="QVC-FE-Qif"/>
+                            <constraint firstItem="jC3-LL-W8P" firstAttribute="trailing" secondItem="OiR-wx-23E" secondAttribute="trailing" constant="10" id="RLo-fm-79i"/>
+                            <constraint firstItem="fgd-tZ-wQx" firstAttribute="centerX" secondItem="FYf-HH-YdG" secondAttribute="centerX" id="Rgw-wM-7gb"/>
+                            <constraint firstItem="Fmz-4Y-9Xe" firstAttribute="top" secondItem="fgd-tZ-wQx" secondAttribute="bottom" constant="20" id="UoZ-W4-aii"/>
+                            <constraint firstItem="ois-cg-wMQ" firstAttribute="centerX" secondItem="FYf-HH-YdG" secondAttribute="centerX" id="cOn-yj-Ke2"/>
+                            <constraint firstItem="OiR-wx-23E" firstAttribute="top" secondItem="ois-cg-wMQ" secondAttribute="bottom" constant="20" id="h2Z-VK-DkS"/>
+                            <constraint firstItem="cQp-kw-MVo" firstAttribute="top" secondItem="ois-cg-wMQ" secondAttribute="bottom" constant="20" id="jck-ji-EnO"/>
+                            <constraint firstItem="fgd-tZ-wQx" firstAttribute="top" secondItem="ois-cg-wMQ" secondAttribute="bottom" constant="20" id="xlP-rr-jeo"/>
+                            <constraint firstItem="q6c-pa-xxM" firstAttribute="leading" secondItem="jC3-LL-W8P" secondAttribute="leading" id="xsa-Sm-zDh"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="jC3-LL-W8P"/>
                     </view>
@@ -143,7 +127,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WDf-JE-Pgo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="197.59999999999999" y="-1.3493253373313345"/>
+            <point key="canvasLocation" x="197.10144927536234" y="-1.6304347826086958"/>
         </scene>
     </scenes>
     <resources>
