Add or substract beer from cell in BeerDetailSB

--- a/App 2 modulo/Las Chelas/Las Chelas/Las Chelas/BeerTab/View/DetailBeerST.storyboard
+++ b/App 2 modulo/Las Chelas/Las Chelas/Las Chelas/BeerTab/View/DetailBeerST.storyboard
@@ -6,7 +6,9 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Baseline standard spacing" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -97,6 +99,24 @@
                                     <constraint firstAttribute="width" constant="200" id="gUi-zi-jca"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ml" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FYG-7M-jBo">
+                                <rect key="frame" x="42" y="286" width="19" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SPh-rD-xXm">
+                                <rect key="frame" x="141" y="286" width="39" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OZB-Wx-srF">
+                                <rect key="frame" x="42" y="672" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -104,20 +124,29 @@
                             <constraint firstItem="jC3-LL-W8P" firstAttribute="bottom" secondItem="q6c-pa-xxM" secondAttribute="bottom" constant="100" id="9cW-Gt-50Z"/>
                             <constraint firstItem="ois-cg-wMQ" firstAttribute="top" secondItem="jC3-LL-W8P" secondAttribute="top" constant="20" id="9wX-Tn-Ovc"/>
                             <constraint firstItem="jC3-LL-W8P" firstAttribute="trailing" secondItem="q6c-pa-xxM" secondAttribute="trailing" id="Dvt-Pk-HXS"/>
+                            <constraint firstItem="SPh-rD-xXm" firstAttribute="leading" secondItem="FYG-7M-jBo" secondAttribute="trailing" constant="80" id="HBs-E9-sMk"/>
+                            <constraint firstItem="SPh-rD-xXm" firstAttribute="top" secondItem="Fmz-4Y-9Xe" secondAttribute="bottom" constant="21" id="Mz7-X3-ei4"/>
                             <constraint firstItem="Fmz-4Y-9Xe" firstAttribute="centerX" secondItem="FYf-HH-YdG" secondAttribute="centerX" id="O3o-PC-j5i"/>
                             <constraint firstItem="q6c-pa-xxM" firstAttribute="top" secondItem="Fmz-4Y-9Xe" secondAttribute="bottom" constant="50" id="QVC-FE-Qif"/>
                             <constraint firstItem="jC3-LL-W8P" firstAttribute="trailing" secondItem="OiR-wx-23E" secondAttribute="trailing" constant="10" id="RLo-fm-79i"/>
                             <constraint firstItem="fgd-tZ-wQx" firstAttribute="centerX" secondItem="FYf-HH-YdG" secondAttribute="centerX" id="Rgw-wM-7gb"/>
                             <constraint firstItem="Fmz-4Y-9Xe" firstAttribute="top" secondItem="fgd-tZ-wQx" secondAttribute="bottom" constant="20" id="UoZ-W4-aii"/>
+                            <constraint firstItem="OZB-Wx-srF" firstAttribute="leading" secondItem="jC3-LL-W8P" secondAttribute="leading" constant="42" id="WAy-Ws-6Vs"/>
                             <constraint firstItem="ois-cg-wMQ" firstAttribute="centerX" secondItem="FYf-HH-YdG" secondAttribute="centerX" id="cOn-yj-Ke2"/>
+                            <constraint firstItem="FYG-7M-jBo" firstAttribute="leading" secondItem="jC3-LL-W8P" secondAttribute="leading" constant="42" id="d9O-sx-2qb"/>
+                            <constraint firstItem="OZB-Wx-srF" firstAttribute="top" secondItem="q6c-pa-xxM" secondAttribute="bottom" constant="36" id="ezN-jw-Mr2"/>
                             <constraint firstItem="OiR-wx-23E" firstAttribute="top" secondItem="ois-cg-wMQ" secondAttribute="bottom" constant="20" id="h2Z-VK-DkS"/>
                             <constraint firstItem="cQp-kw-MVo" firstAttribute="top" secondItem="ois-cg-wMQ" secondAttribute="bottom" constant="20" id="jck-ji-EnO"/>
+                            <constraint firstItem="q6c-pa-xxM" firstAttribute="top" secondItem="SPh-rD-xXm" secondAttribute="bottom" constant="8" id="mwb-qm-i3G"/>
+                            <constraint firstItem="jC3-LL-W8P" firstAttribute="bottom" secondItem="OZB-Wx-srF" secondAttribute="bottom" constant="43" id="sWH-5Y-hDa"/>
+                            <constraint firstItem="q6c-pa-xxM" firstAttribute="firstBaseline" secondItem="FYG-7M-jBo" secondAttribute="baseline" constant="12.333333333333334" symbolType="layoutAnchor" id="t90-gL-WT3"/>
                             <constraint firstItem="fgd-tZ-wQx" firstAttribute="top" secondItem="ois-cg-wMQ" secondAttribute="bottom" constant="20" id="xlP-rr-jeo"/>
                             <constraint firstItem="q6c-pa-xxM" firstAttribute="leading" secondItem="jC3-LL-W8P" secondAttribute="leading" id="xsa-Sm-zDh"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="jC3-LL-W8P"/>
                     </view>
                     <connections>
+                        <outlet property="beerCounterLabel" destination="OZB-Wx-srF" id="WyI-b3-vF6"/>
                         <outlet property="beerImage" destination="ois-cg-wMQ" id="ZDl-VC-vIJ"/>
                         <outlet property="beerNameLabel" destination="cQp-kw-MVo" id="wHq-nb-iwj"/>
                         <outlet property="countryBeerLabel" destination="fgd-tZ-wQx" id="bDl-FJ-JPw"/>
