--- a/App 2 modulo/Las Chelas/Las Chelas/Las Chelas/BeerTab/View/DetailBeerST.storyboard
+++ b/App 2 modulo/Las Chelas/Las Chelas/Las Chelas/BeerTab/View/DetailBeerST.storyboard
@@ -29,13 +29,13 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cQp-kw-MVo">
-                                <rect key="frame" x="10" y="160" width="41.666666666666664" height="21"/>
+                                <rect key="frame" x="10" y="160" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fgd-tZ-wQx">
-                                <rect key="frame" x="186.33333333333334" y="160" width="41.666666666666657" height="20.333333333333343"/>
+                                <rect key="frame" x="186" y="160" width="42" height="20"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -51,32 +51,33 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="43.666666666666664"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Biy-V1-XqB">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Biy-V1-XqB">
                                                     <rect key="frame" x="32" y="11" width="42" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5EL-gc-3Hi">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5EL-gc-3Hi">
                                                     <rect key="frame" x="141" y="11" width="42" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="drJ-u9-kVv">
-                                                    <rect key="frame" x="255" y="11" width="42" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TfO-7n-DrL">
+                                                    <rect key="frame" x="342" y="11" width="42" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="5EL-gc-3Hi" firstAttribute="leading" secondItem="Biy-V1-XqB" secondAttribute="trailing" constant="67" id="mGb-f2-aHM"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="amountMlLabel" destination="Biy-V1-XqB" id="WBW-FY-A5K"/>
-                                            <outlet property="amountOfBeerLabel" destination="drJ-u9-kVv" id="26O-Co-NwJ"/>
+                                            <outlet property="amountOfBeerLabel" destination="TfO-7n-DrL" id="7hV-Pk-Ksg"/>
                                             <outlet property="priceLabel" destination="5EL-gc-3Hi" id="GNa-HM-kEG"/>
                                         </connections>
                                     </tableViewCell>
@@ -99,6 +100,12 @@
                                     <constraint firstAttribute="width" constant="200" id="gUi-zi-jca"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OZB-Wx-srF">
+                                <rect key="frame" x="42" y="672" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ml" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FYG-7M-jBo">
                                 <rect key="frame" x="42" y="286" width="19" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -111,8 +118,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OZB-Wx-srF">
-                                <rect key="frame" x="42" y="672" width="42" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Count" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cxb-kL-6nK">
+                                <rect key="frame" x="347" y="285" width="47" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -121,9 +128,11 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="cQp-kw-MVo" firstAttribute="leading" secondItem="jC3-LL-W8P" secondAttribute="leading" constant="10" id="3LV-oH-Vnp"/>
+                            <constraint firstItem="cxb-kL-6nK" firstAttribute="trailing" secondItem="OiR-wx-23E" secondAttribute="trailing" constant="-10" id="5sc-tH-cCS"/>
                             <constraint firstItem="jC3-LL-W8P" firstAttribute="bottom" secondItem="q6c-pa-xxM" secondAttribute="bottom" constant="100" id="9cW-Gt-50Z"/>
                             <constraint firstItem="ois-cg-wMQ" firstAttribute="top" secondItem="jC3-LL-W8P" secondAttribute="top" constant="20" id="9wX-Tn-Ovc"/>
                             <constraint firstItem="jC3-LL-W8P" firstAttribute="trailing" secondItem="q6c-pa-xxM" secondAttribute="trailing" id="Dvt-Pk-HXS"/>
+                            <constraint firstItem="cxb-kL-6nK" firstAttribute="baseline" secondItem="SPh-rD-xXm" secondAttribute="baseline" constant="-1" id="FFN-A2-zqW"/>
                             <constraint firstItem="SPh-rD-xXm" firstAttribute="leading" secondItem="FYG-7M-jBo" secondAttribute="trailing" constant="80" id="HBs-E9-sMk"/>
                             <constraint firstItem="SPh-rD-xXm" firstAttribute="top" secondItem="Fmz-4Y-9Xe" secondAttribute="bottom" constant="21" id="Mz7-X3-ei4"/>
                             <constraint firstItem="Fmz-4Y-9Xe" firstAttribute="centerX" secondItem="FYf-HH-YdG" secondAttribute="centerX" id="O3o-PC-j5i"/>
