--- a/App 2 modulo/Las Chelas/Las Chelas/Las Chelas/OrderTab/View/Order.storyboard
+++ b/App 2 modulo/Las Chelas/Las Chelas/Las Chelas/OrderTab/View/Order.storyboard
@@ -6,10 +6,11 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Order-->
+        <!--Ordenes-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController automaticallyAdjustsScrollViewInsets="NO" id="BYZ-38-t0r" customClass="OrderController" customModule="Las_Chelas" customModuleProvider="target" sceneMemberID="viewController">
@@ -22,8 +23,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="a83-1L-dW7">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
+                                <color key="backgroundColor" name="whiteBeer"/>
+                                <color key="sectionIndexColor" name="blackBeer"/>
+                                <color key="sectionIndexBackgroundColor" name="whiteBeer"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="jKL-9s-ghV" detailTextLabel="9f3-ms-tfL" style="IBUITableViewCellStyleSubtitle" id="O9v-ua-h9s">
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
@@ -47,7 +50,9 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <color key="backgroundColor" name="whiteBeer"/>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" name="whiteBeer"/>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
@@ -65,7 +70,7 @@
                         </constraints>
                     </view>
                     <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
-                    <navigationItem key="navigationItem" title="Order" id="um8-W5-8Eo"/>
+                    <navigationItem key="navigationItem" title="Ordenes" id="um8-W5-8Eo"/>
                     <connections>
                         <outlet property="tableView" destination="a83-1L-dW7" id="gvP-cd-r4I"/>
                     </connections>
@@ -74,14 +79,20 @@
             </objects>
             <point key="canvasLocation" x="466" y="375"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Ordenes-->
         <scene sceneID="Ygz-Ge-Qqt">
             <objects>
                 <navigationController id="xr4-tb-zDb" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ljF-gP-T1B" colorLabel="IBBuiltInLabel-Orange">
+                    <tabBarItem key="tabBarItem" title="Ordenes" id="tFt-A6-enz"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="ljF-gP-T1B" colorLabel="IBBuiltInLabel-Orange">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="barTintColor" red="0.0" green="0.56284224989999998" blue="0.31881666180000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="barTintColor" name="yellowBeer"/>
+                        <textAttributes key="titleTextAttributes">
+                            <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
+                            <color key="textColor" name="blackBeer"/>
+                        </textAttributes>
                     </navigationBar>
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="c7h-UG-iXU"/>
@@ -92,4 +103,15 @@
             <point key="canvasLocation" x="-300" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <namedColor name="blackBeer">
+            <color red="0.22400000691413879" green="0.24300000071525574" blue="0.27500000596046448" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="whiteBeer">
+            <color red="0.93725490196078431" green="0.93725490196078431" blue="0.93725490196078431" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="yellowBeer">
+            <color red="0.97299998998641968" green="0.70999997854232788" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
